Fix truncat of component title and added version in new line Signed-off-by: Björn Müller <bjoern.mueller@kanu-baerchen.de>

--- a/org.eclipse.winery.repository.ui/src/css/wineryRepository.css
+++ b/org.eclipse.winery.repository.ui/src/css/wineryRepository.css
@@ -295,6 +295,7 @@ div.serviceTemplate div.bottom {
 div.mainContentContainer.relationshipType div.top {
     background: url('../assets/img/containers/rt/rt-FrameTopLarge.jpg');
 }
+
 div.mainContentContainer.relationshipType div.top.twolines {
     height: 208px;
 }
@@ -541,7 +542,7 @@ div.entityContainer > div.right {
 }
 
 div.entityContainer > div.center > div.informationContainer {
-    margin-top: 25px;
+    margin-top: 15px;
     height: 45px;
     color: #787878;
     font-family: arial, sans-serif;
@@ -559,7 +560,18 @@ div.entityContainer > div.center > div.informationContainer > div.name {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    direction: rtl;
+    direction: ltr;
+    text-align: left;
+}
+
+div.entityContainer > div.center > div.informationContainer > div.name:hover {
+    color: #00c2ff;
+}
+
+div.entityContainer > div.center > div.informationContainer > div.version {
+    font-size: 14px;
+    height: 18px;
+    direction: ltr;
     text-align: left;
 }
 
